--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "docker>=7.0.0",
-    "grpcio==1.60.0",
-    "grpcio-tools==1.60.0",
-    "pydantic==2.5.2",
-    "pydantic-settings==2.1.0",
-    "pytest==7.4.3",
-    "python-dotenv==1.0.0",
+    "grpcio>=1.76.0",
+    "grpcio-tools>=1.76.0",
+    "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
+    "pytest>=9.0.2",
+    "python-dotenv>=1.2.1",
 ]
