Improve test output

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,8 @@ dependencies = [
     "pytest>=9.0.2",
     "python-dotenv>=1.2.1",
 ]
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore:datetime.datetime.utcfromtimestamp:DeprecationWarning:google.protobuf.internal.well_known_types",
+]
